// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooFormColorPickerComponent Prop rendering Should re-render when color prop is updated 1`] = `
<yoo-form-color-picker
  class="hydrated"
  color="#fa2367"
  data-yoo-form-color-picker-host=""
>
  
  <div
    attr-layout="row"
    class="color-picker-container"
    data-yoo-form-color-picker=""
  >
    <div
      class="color-selector"
      data-yoo-form-color-picker=""
      style="background: rgb(250, 35, 103);"
    >
      <input
        data-yoo-form-color-picker=""
        type="color"
      />
    </div>
    <input
      data-yoo-form-color-picker=""
      type="text"
    />
  </div>
</yoo-form-color-picker>
`;

exports[`YooFormColorPickerComponent Prop rendering Should re-render when hide-label prop is updated 1`] = `
<yoo-form-color-picker
  class="hydrated"
  data-yoo-form-color-picker-host=""
>
  
  <div
    attr-layout="row"
    class="color-picker-container"
    data-yoo-form-color-picker=""
  >
    <div
      class="color-selector"
      data-yoo-form-color-picker=""
      style="background: rgb(255, 255, 255);"
    >
      <input
        data-yoo-form-color-picker=""
        type="color"
      />
    </div>
    
  </div>
</yoo-form-color-picker>
`;

exports[`YooFormColorPickerComponent Rendering Should render with a color as prop 1`] = `
<yoo-form-color-picker
  class="hydrated"
  color="#fa2367"
  data-yoo-form-color-picker-host=""
>
  
  <div
    attr-layout="row"
    class="color-picker-container"
    data-yoo-form-color-picker=""
  >
    <div
      class="color-selector"
      data-yoo-form-color-picker=""
      style="background: rgb(250, 35, 103);"
    >
      <input
        data-yoo-form-color-picker=""
        type="color"
      />
    </div>
    <input
      data-yoo-form-color-picker=""
      type="text"
    />
  </div>
</yoo-form-color-picker>
`;

exports[`YooFormColorPickerComponent Rendering Should render with no prop 1`] = `
<yoo-form-color-picker
  class="hydrated"
  data-yoo-form-color-picker-host=""
>
  
  <div
    attr-layout="row"
    class="color-picker-container"
    data-yoo-form-color-picker=""
  >
    <div
      class="color-selector"
      data-yoo-form-color-picker=""
      style="background: rgb(255, 255, 255);"
    >
      <input
        data-yoo-form-color-picker=""
        type="color"
      />
    </div>
    <input
      data-yoo-form-color-picker=""
      type="text"
    />
  </div>
</yoo-form-color-picker>
`;

exports[`YooFormColorPickerComponent Rendering Should render without label 1`] = `
<yoo-form-color-picker
  class="hydrated"
  data-yoo-form-color-picker-host=""
  hide-label="true"
>
  
  <div
    attr-layout="row"
    class="color-picker-container"
    data-yoo-form-color-picker=""
  >
    <div
      class="color-selector"
      data-yoo-form-color-picker=""
      style="background: rgb(255, 255, 255);"
    >
      <input
        data-yoo-form-color-picker=""
        type="color"
      />
    </div>
    
  </div>
</yoo-form-color-picker>
`;
